# afstools

./: .gitignore
CacheDebugging/: FindVFiles-build.sh  FindVFiles-build.sh-sgi  dump_afscache.sgi_52  whatfid-build.sh  whatfid.c
CacheDebugging/.svn/: entries
CacheDebugging/.svn/text-base/: DataCollection-Example.svn-base  FindVFiles-build.sh-solaris.svn-base  FindVFiles-sgi.c.svn-base  FindVFiles-sgi.svn-base  FindVFiles.c.svn-base  Using-whatfid-n-FindVFiles-Example.svn-base  whatfid-build.sh-solaris.svn-base
afs-krb5/: AFS_K5_NAME_CHANGE  COPYRIGHT  ISSUES  KERBEROS-ADDITIONS  README  THEORY
afs-krb5/patches/: monster-patch
afs-krb5/src/: .cvsignore  Makefile.in  aclocal.m4  afs2k5db.c  aklog.1  aklog.c  aklog.h  aklog_main.c  aklog_param.c  asetkey.c  configure  configure.in  fakeka.c  krb_util.c  linked_list.c  linked_list.h  make.win
afs-krb5/xdm/: Imakefile  session.c
afs-krb5/xdm/greeter/: .cvsignore
afs-krb5/xlockmore/: .cvsignore  passwd.c  vroot.h
afsfree/: afsfree
athena/: Makefile  asetkey.c
athena/.svn/: entries
athena/.svn/text-base/: aunlog.c.svn-base  readcred.c.svn-base
athena/aklog/.svn/: entries
auth-samples/: kauthtest.c  listtokens.c
auth-samples/.svn/: entries
auth-samples/.svn/text-base/: afs-auth.c.svn-base  afs-auth.makefile.svn-base  listtokens-compile.sh.svn-base
auto-backup.AFS_3.1b/: jweekly  stack-backup.ksh  stbutc  unload-tape.c
auto-backup.AFS_3.1b/.svn/: entries
auto-backup.AFS_3.1b/.svn/text-base/: dump.week1.svn-base
backup-automate.AFS_3.3/: bumonitor
backup-automate.AFS_3.3/.svn/: entries
backup-automate.AFS_3.3/.svn/text-base/: dobackup.svn-base  tapelabels.svn-base
backup_afs/: backup_afs.sh
balance/: Makefile  Makefile.std  README  afscall.c  afscall.h  agent.c  agent.h  agent_bynumber.c  agent_bynumber.h  agent_byoverdraft.c  agent_byoverdraft.h  agent_bysize.c  agent_bysize.h  agent_byweekuse.c  agent_byweekuse.h  balance.c  balance.doc  balance.h  balance2.c  balancer.sh  balutil.c  balutil.h  config-lex.l  config-yacc.y  config.h  example.cf  hash.c  hash.h  match.c  match.h  mygetopt.c  mygetopt.h  state.c  state.h  xmalloc.c  xmalloc.h
buta/: delbuta.tar.Z  test_buta.tar.Z
buta/.svn/: entries
buta/.svn/text-base/: afs33.tar.Z.svn-base  afs34a.tar.Z.svn-base
cellservdb/: check-cellservdb
cellservdb/.svn/: entries
cklog/: Makefile  cklog.c
cklog/.svn/: entries
crack/.svn/: entries
crack/.svn/text-base/: afscrack-1.1.tar.gz.svn-base  dict.tar.gz.svn-base
crosslog/: crosslog.makefile.old
crosslog/.svn/: entries
crosslog/.svn/text-base/: crosslog.c.old.svn-base  crosslog.c.svn-base  crosslog.makefile.svn-base
dump_afscache/: Makefile  build.sh  dump_afscache.rs_aix32
dump_afscache/.svn/: entries
dump_afscache/.svn/text-base/: dump_afscache.c.svn-base
gnu-du/.svn/: entries
kapop/.svn/: entries
package/: Makefile  Makefile~  RCS  check.c  check.c~  cp.c  ln.c  loadentry.c  loadentry.c~  loadfile.c  main.c  misc.c  mklostfound.c  mv.c  node.c  node.c~  node.h  node.h~  package.8  package.ms  rm.c  stat.c  strsav.c  sync.c  update.c
pckg/.svn/: entries
pckg/.svn/text-base/: pckg.svn-base
pcnfsd/: common.h  common.h.orig  core  pcnfsd_clnt.c  pcnfsd_misc.c  pcnfsd_print.c  pcnfsd_svc.c
pcnfsd/.svn/: entries
pcnfsd/.svn/text-base/: Makefile.AIX.svn-base  Makefile.svn-base  pcnfsd.8c.svn-base  pcnfsd_test.c.svn-base  pcnfsd_v1.c.svn-base  pcnfsd_v2.c.orig.svn-base  pcnfsd_v2.c.svn-base
pcnfsd/sunos/.svn/: entries
reauth/: Makefile  reauth.text
reauth-example/: au-script  reauthd  testopen.c
reauth-example/.svn/: entries
reauth/.svn/: entries
reauth/.svn/text-base/: reauth.c.svn-base  reauth.help.svn-base
release_if_necessary/: release_if_necessary.sh
repctrl/.svn/: entries
repctrl/.svn/text-base/: repctrl-0.0.tar.gz.svn-base
restorevol/: restorevol
scout-rx/.svn/: entries
scout-rx/.svn/text-base/: qcalls.svn-base  scout.svn-base
sentinel/: Makefile  callback.c  color.notes  ff  handler.c  sentinel.help
sentinel/.svn/: entries
sentinel/.svn/text-base/: parser.c.svn-base  prober.c.svn-base  proposal.svn-base  sentinel.c.svn-base  sentinel.config.svn-base  sentinel.h.svn-base  window.c.svn-base
sparse.files/: sparse-file-cp.c  sparse-file-creator.c
sparse.files/.svn/: entries
tarballs/: afs-krb5-1.2.tar.Z
translator-scripts/: klog  kpasswd
translator-scripts/.svn/: entries
translator-scripts/.svn/text-base/: bos.svn-base  unlog.svn-base
ucsdb/: configure  configure.in  flags.c  ucsdb.man
ucsdb/.svn/: entries
ucsdb/.svn/text-base/: Makefile.in.svn-base  TODO.svn-base  acconfig.h.svn-base  config.h.in.svn-base  csdb_operations.c.svn-base  ucsdb.c.svn-base  ucsdb.h.svn-base
venusmon/.svn/: entries
venusmon/.svn/text-base/: Makefile.svn-base  a.out.svn-base  vmon.c.svn-base
volid/: volid.pl
volid/.svn/: entries
xdm/: cologne-setgid-fix  diffs.orig-bsc  diffs.orig-cornell  diffs.rpi-cornell
xdm/.svn/: entries
xdm/.svn/text-base/: Index.svn-base  announcement.bsc.svn-base  announcement.rpi.svn-base  diff.orig-rpi.svn-base  patches.svn-base  rpi-16-logins-fix.svn-base  security-fix.svn-base
xdm/BSC/.svn/: entries
xdm/Cornell/.svn/: entries
xdm/Orig/.svn/: entries
xdm/RPI/.svn/: entries
xlock/.svn/: entries
xlock/xlock.cmu/.svn/: entries
xlock/xlock.transarc/.svn/: entries
