dnl Process this file with autoconf to produce a configure script.
AC_INIT(ucsdb.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(VOS_PROG, vos, [not found])
AC_PATH_PROG(FS, fs, [not found])

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(stdio.h netdb.h sys/stat.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_DEFINE_UNQUOTED(VOS, "${VOS_PROG}")
AC_DEFINE_UNQUOTED(FS, "${FS}")
AC_DEFINE_UNQUOTED(CELLNAME, `fs wscell | awk '{print $6}' | tr "'" '"'`)

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir rmdir)

AC_OUTPUT(Makefile)
